Fixed needle z-index, changed date format depending on type, added convenience model methods

--- a/stylesheets/scss/user.scss
+++ b/stylesheets/scss/user.scss
@@ -537,8 +537,10 @@
         height: 0px;
         position: absolute;
         top: 50%;
-        width: calc(100% - 12px);
         opacity: 0.7;
+        width: calc(100% - 12px);
+        z-index: 4;
+
         @include single-box-shadow(
                 rgba(0, 0, 0, 0.7), 0px, 2px, 3px
             );
